[gd_scene load_steps=4 format=3 uid="uid://24pr818a6nqn"]

[ext_resource type="Script" path="res://SelectAvatar.gd" id="1_8wdn5"]
[ext_resource type="Texture2D" uid="uid://cj8flyl04qlnf" path="res://characters/assets/Bodies/16x16/Body_02.png" id="2_t6tgu"]
[ext_resource type="Theme" uid="uid://ce7gdo6lqyra0" path="res://study room theme.tres" id="3_1o706"]

[node name="SelectAvatar" type="Node2D"]
position = Vector2(215, 133)
script = ExtResource("1_8wdn5")

[node name="CompositeSprite1" type="Node2D" parent="."]
position = Vector2(192, 76)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite1"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite1"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite1"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite1"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite2" type="Node2D" parent="."]
position = Vector2(292, 76)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite2"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite2"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite2"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite2"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite3" type="Node2D" parent="."]
position = Vector2(392, 76)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite3"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite3"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite3"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite3"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite4" type="Node2D" parent="."]
position = Vector2(492, 76)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite4"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite4"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite4"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite4"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite5" type="Node2D" parent="."]
position = Vector2(192, 226)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite5"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite5"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite5"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite5"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite6" type="Node2D" parent="."]
position = Vector2(292, 226)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite6"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite6"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite6"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite6"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite7" type="Node2D" parent="."]
position = Vector2(392, 226)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite7"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite7"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite7"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite7"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="CompositeSprite8" type="Node2D" parent="."]
position = Vector2(492, 226)
scale = Vector2(2, 2)

[node name="Body" type="Sprite2D" parent="CompositeSprite8"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_t6tgu")
hframes = 58
vframes = 20

[node name="Eyes" type="Sprite2D" parent="CompositeSprite8"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Hairstyles" type="Sprite2D" parent="CompositeSprite8"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Outfit" type="Sprite2D" parent="CompositeSprite8"]
scale = Vector2(2, 2)
hframes = 58
vframes = 20

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = -1
offset_left = -215.0
offset_top = -133.0
offset_right = 937.0
offset_bottom = 515.0
theme = ExtResource("3_1o706")

[node name="Button1" type="Button" parent="Panel"]
offset_left = 382.0
offset_top = 284.0
offset_right = 454.0
offset_bottom = 330.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button2" type="Button" parent="Panel"]
offset_left = 479.0
offset_top = 284.0
offset_right = 551.0
offset_bottom = 330.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button3" type="Button" parent="Panel"]
offset_left = 583.0
offset_top = 283.0
offset_right = 655.0
offset_bottom = 329.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button4" type="Button" parent="Panel"]
offset_left = 680.0
offset_top = 282.0
offset_right = 752.0
offset_bottom = 328.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button5" type="Button" parent="Panel"]
offset_left = 380.0
offset_top = 438.0
offset_right = 452.0
offset_bottom = 484.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button6" type="Button" parent="Panel"]
offset_left = 480.0
offset_top = 438.0
offset_right = 552.0
offset_bottom = 484.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button7" type="Button" parent="Panel"]
offset_left = 579.0
offset_top = 439.0
offset_right = 651.0
offset_bottom = 485.0
theme = ExtResource("3_1o706")
text = "Select"

[node name="Button8" type="Button" parent="Panel"]
y_sort_enabled = true
offset_left = 682.0
offset_top = 439.0
offset_right = 754.0
offset_bottom = 485.0
theme = ExtResource("3_1o706")
text = "Select"

[connection signal="pressed" from="Panel/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Panel/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Panel/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Panel/Button8" to="." method="_on_button_8_pressed"]
